// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled comments 1`] = `
<View>
  <Text
    allowFontScaling={false}
  >
    Comments for this article have been turned off
  </Text>
  <Text
    allowFontScaling={false}
  >
    For more details, please see our 
    

    <Text
      accessibilityRole="link"
      allowFontScaling={false}
    >
      community guidelines
    </Text>
  </Text>
</View>
`;

exports[`enabled comments 1`] = `
<View>
  <Text
    allowFontScaling={false}
  >
    123 comments
  </Text>
  <Text
    allowFontScaling={false}
  >
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
      allowFontScaling={false}
    >
      here
    </Text>
  </Text>
  <View
    accessibilityLabel="View comments"
    accessibilityRole="button"
    focusable={true}
  >
    <Text
      allowFontScaling={false}
      title="View comments"
    >
      View comments
    </Text>
  </View>
</View>
`;

exports[`should render disabled-comments if commentsGloballyDisabled 1`] = `
<View>
  <Text
    allowFontScaling={false}
  >
    Comments are currently unavailable
  </Text>
</View>
`;

exports[`single comment 1`] = `
<View>
  <Text
    allowFontScaling={false}
  >
    1 comment
  </Text>
  <Text
    allowFontScaling={false}
  >
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
      allowFontScaling={false}
    >
      here
    </Text>
  </Text>
  <View
    accessibilityLabel="View comments"
    accessibilityRole="button"
    focusable={true}
  >
    <Text
      allowFontScaling={false}
      title="View comments"
    >
      View comments
    </Text>
  </View>
</View>
`;

exports[`zero comments 1`] = `
<View>
  <Text
    allowFontScaling={false}
  >
    0 comments
  </Text>
  <Text
    allowFontScaling={false}
  >
    Comments are subject to our community guidelines, which can be viewed 
    <Text
      accessibilityRole="link"
      allowFontScaling={false}
    >
      here
    </Text>
  </Text>
  <View
    accessibilityLabel="Post a comment"
    accessibilityRole="button"
    focusable={true}
  >
    <Text
      allowFontScaling={false}
      title="Post a comment"
    >
      Post a comment
    </Text>
  </View>
</View>
`;
